syntax = "proto3";
package br.com.proto;

message ContextRequest {
	string instruction = 1;
}

message ContextResponse {
	string message = 1;
}

message SubscribeRequest {
    string key = 1;
}

message SubscribeResponse {
    string message = 1;
}

service ContextService {
	rpc insert(ContextRequest) returns (ContextResponse);
	rpc update(ContextRequest) returns (ContextResponse);
	rpc delete(ContextRequest) returns (ContextResponse);
	rpc find(ContextRequest) returns (ContextResponse);
    rpc subscribe(SubscribeRequest) returns (stream SubscribeResponse);

}
